[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[[bin]]
name = "os"
test = false
bench = false
