[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
easy-fs = { path = "../easy-fs" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.7.0"

[[bin]]
name = "os"
test = false
bench = false
