[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[lib]
test = false
bench = false

[[bin]]
name = "00power_3"
test = false
bench = false

[[bin]]
name = "01power_5"
test = false
bench = false

[[bin]]
name = "02power_7"
test = false
bench = false

[[bin]]
name = "03sleep"
test = false
bench = false
