[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[lib]
test = false
bench = false

[[bin]]
name = "hello_world"
test = false
bench = false

[[bin]]
name = "initproc"
test = false
bench = false

[[bin]]
name = "user_shell"
test = false
bench = false
