[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[lib]
test = false
bench = false

[[bin]]
name = "exit"
test = false
bench = false

[[bin]]
name = "fantastic_text"
test = false
bench = false

[[bin]]
name = "forkexec"
test = false
bench = false

[[bin]]
name = "forktest"
test = false
bench = false

[[bin]]
name = "forktest2"
test = false
bench = false

[[bin]]
name = "forktest_simple"
test = false
bench = false

[[bin]]
name = "forktree"
test = false
bench = false

[[bin]]
name = "hello_world"
test = false
bench = false

[[bin]]
name = "initproc"
test = false
bench = false

[[bin]]
name = "matrix"
test = false
bench = false

[[bin]]
name = "sleep"
test = false
bench = false

[[bin]]
name = "sleep_simple"
test = false
bench = false

[[bin]]
name = "stack_overflow"
test = false
bench = false

[[bin]]
name = "user_shell"
test = false
bench = false

[[bin]]
name = "usertests"
test = false
bench = false

[[bin]]
name = "usertests_simple"
test = false
bench = false

[[bin]]
name = "yield"
test = false
bench = false
